[project]
name = "longest-word"
version = "0.1.0"
description = ""
authors = [
    {name = "denizozkaymak",email = "denizgokalp.5@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.3,<3.0.0)"
]

[tool.poetry]
packages = [{include = "longest_word", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pylint = "^3.3.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
